レビュー後の環境修正
